@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.459 2005/11/06 00:17:56 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.460 2005/11/06 06:27:32 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  6 Nov 2005; Preston Cody <codeman@gentoo.org>
+  webgli: Partitioning making progress.
 
   5 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
